statefulset-mssql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: bidding-app
  name: mssql
  labels:
    app: mssql
spec:
  serviceName: "mssql"
  replicas: 1
  selector:
    matchLabels:
      app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      containers:
        - name: mssql
          image: mcr.microsoft.com/mssql/server:2019-latest
          ports:
            - containerPort: 1433
              name: mssql
          command:
            - /bin/bash
            - -c
            - |
              /opt/mssql/bin/sqlservr &
              sleep 10;
              /opt/mssql-tools18/bin/sqlcmd -S localhost -U SA -P ${MSSQL_SA_PASSWORD} -C -Q "IF NOT EXISTS (SELECT * FROM sys.databases WHERE name = 'bidding') BEGIN CREATE DATABASE bidding; END"
              wait
          readinessProbe:
            exec:
              command:
                - /bin/bash
                - -c
                - |
                  echo "Debugging: MSSQL_SA_PASSWORD=$MSSQL_SA_PASSWORD" &&
                  /opt/mssql-tools18/bin/sqlcmd -S localhost -U SA -P "${MSSQL_SA_PASSWORD}" -C -Q "SELECT 1"
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 5
  # volumeClaimTemplates:
  #   - metadata:
  #       name: mssql-persistent-storage
  #     spec:
  #       accessModes: ["ReadWriteOnce"]
  #       resources:
  #         requests:
  #           storage: 10Gi # Define the size of the persistent storage (adjust as needed)
---
apiVersion: v1
kind: Service
metadata:
  namespace: bidding-app
  name: service-mssql-internal
  labels:
    app: service-mssql-internal
spec:
  type: ClusterIP
  selector:
    app: mssql
  ports:
    - protocol: TCP
      port: 1434
      targetPort: 1433
