ingress-bidding-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-api-ui
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.bidding.local
      secretName: my-tls-secret
    - hosts:
        - bidding.local
      secretName: my-tls-secret
  rules:
    - host: api.bidding.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-api-internal
                port:
                  number: 8000

    - host: bidding.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-ui-internal
                port:
                  number: 3000
---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-ui
#   annotations:

# spec:
#   ingressClassName: nginx
#   tls:
#     - hosts:
#         - bidding.local
#       secretName: my-tls-secret
#   rules:
#     - host: bidding.local
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: service-ui-internal
#                 port:
#                   number: 3000
